compiler/kernc_cli/tests/soundness/reject/const_generics/nested_typed_enum_pattern_const_argument_mismatch_rejected.kn
// class: const-generic-pattern
// source: a nested typed enum pattern must use the instantiated const arguments of the payload type
// stderr: mismatched types
// stderr: expected `Inner[3]`
// stderr: found `Inner[4]`

enum Inner[N: usize] {
    A: [N]u8,
    B,
};

enum Outer[N: usize] {
    Wrap: Inner[N],
    Done,
};

fn main() i32 {
    let value = Outer[3].{ Wrap: Inner[3].{ A: [3]u8.{ 1, 2, 3 } } };
    return match value {
        .{ Wrap: Inner[4].{ A: _ } } => 0,
        .{ Wrap: .B } => 1,
        .Done => 2,
    };
}
